# DoctorPhonez

./: .gitignore  README.md  create_databases.sh  docker-compose.yml  package-lock.json  permissions.sh
client/: README.md  next.config.js  package-lock.json  package.json
client/app/: Modal.js  appleretrieve.js  appleretrieve.module.css  footer.js  footer.module.css  globals.css  head.js  layout.js  nav.js  nav.module.css  page.js  page.module.css  recentitems.js  recentitems.module.css  samsungretrieve.js  samsungretrieve.module.css  sectionfive.js  sectionone.js  sectionone.module.css  sectionseven.js  sectionthree.js  testimonials.js  testimonials.module.css
client/app/account/: page.js
client/app/account/login/: page.js  page.module.css
client/app/account/recover/: page.js
client/app/account/register/: page.js  page.module.css
client/app/cart/: cartpage.module.css  page.js
client/app/checkout/: CheckoutForm.js  page.js
client/app/payment/: CheckoutForm.js  page.js
client/app/payment/[success]/: page.js
client/app/products/: page.js  producttable.js
client/redux/reducers/: discountSlice.js
nginx/: Dockerfile  nginx.conf
productserver/: Cargo.toml
productserver/database.db/: 000008.sst  IDENTITY  LOG  LOG.old.1678117558763754  LOG.old.1678117676436290  LOG.old.1678123430704925  LOG.old.1678124757938984  LOG.old.1678312989918791  LOG.old.1678313102035128  MANIFEST-000030
productserver/src/: main.rs  productroutes.rs
productsserver/: Cargo.toml  Dockerfile
productsserver/src/: main.rs  productroutes.rs
server/: index.js  package-lock.json  package.json
server/init-scripts/: 01-init-db.sql
server/kafka/: consumer.js  producer.js
server/routers/: auth.js  delivery.js  discountcodes.js  orders.js  paymentintent.js  products.js  stripecheckout.js  userrouter.js
server/utils/: jwt.js
stripeserver/: app.js  package-lock.json  package.json
stripeserver/routers/: paymentintent.js  stripecheckout.js
surrealserver/: Cargo.toml  Dockerfile
surrealserver/src/: main.rs  userroutes.rs
userserver/: Cargo.toml  Dockerfile
userserver/src/: customerrors.rs  main.rs  userroutes.rs
(+12 files in other folders)
