[package]
name = "productsserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["headers"]}
serde_json = "1.0.93"
dotenv = "0.15.0"
serde = "1.0.152"
tower-http = { version = "0.3.5", features = ["cors"] }
tokio = { version = "1.23.0", features = ["full"] }
tower-cookies = "0.8.0"
http = "0.2.8"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
axum-macros = "0.3.5"
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "offline", "time", "chrono", "uuid", "bigdecimal"] }
