[package]
name = "surrealserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
axum = { version = "0.6.9", features = ["headers"]}
surrealdb = { git = "https://github.com/surrealdb/surrealdb", branch="main" }
serde_json = "1.0.93"
dotenv = "0.15.0"
serde = "1.0.152"
chrono = { version = "0.4.22", features = ["serde"] }
axum-macros = "0.3.4"
argon2 = "0.4.1"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
lettre = "0.10.1"
jsonwebtoken = "8.2.0"
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "offline", "time", "chrono", "uuid", "bigdecimal"] }
http = "0.2.8"
tower-http = { version = "0.3.5", features = ["cors"] }
tower-cookies = "0.8.0"
